--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>
       Witaj na mojej stronie<br>
-      tablice
+      stringi
     </h1>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
